--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
   min-width: 1100px;
   margin: auto;
   font-family: "Inter", Arial, sans-serif;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
 }
