--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,13 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-family: "Noto Serif", "Times New Roman", serif;
+  font-family: "Inter", Arial, sans-serif, "Noto Serif", serif;
   font-size: 16px;
   line-height: 20px;
+}
+
+.header {
+}
+
+.footer {
 }
