--- a/pages/index.css
+++ b/pages/index.css
@@ -8,7 +8,170 @@
 }
 
 .header {
+  height: 100vh;
+  max-height: 800px;
+  min-height: 720px;
+  color: #000000;
+  background-color: #ffffff;
+  background-image: url("../images/background_header.svg");
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 
-.footer {
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+  position: relative;
+  margin-top: 30px;
+  left: 30px;
+  width: 105px;
+  height: 39px;
+}
+
+.nav__links {
+  list-style: none;
+  display: flex;
+  position: relative;
+  margin: 30px 80px 0 0;
+  gap: 20px;
+  padding: 0;
+}
+
+.nav__links:hover {
+  color: #2f80ed;
+}
+
+.nav_link {
+  text-decoration: none;
+  position: relative;
+  font-weight: 500;
+  color: black;
+}
+
+.header__title {
+  max-width: 729px;
+  margin: 183px 0 28px 80px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+
+.span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__description {
+  max-width: 683px;
+  margin-left: 80px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+
+.header__footer {
+  width: 1280px;
+  margin: auto 80px 40px 80px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+}
+
+.header__paragraph {
+  margin: 0;
+}
+
+.span-paragraph {
+  display: block;
+}
+
+.header__paragraph_right {
+  margin: 32px 0 0;
+}
+
+.recips {
+  background-color: #0a2750;
+  background-image: url(../images/background_recipes.svg);
+  background-position: center;
+  background-size: cover;
+  color: white;
+  position: relative;
+}
+
+.recips__title {
+  max-width: 580px;
+  margin: 0;
+  position: absolute;
+  top: 100px;
+  left: 80px;
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 500;
+}
+
+.recips__subtitle {
+  max-width: 438px;
+  margin: 0;
+  position: absolute;
+  top: 168px;
+  left: 80px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.recips__videos {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.video-item {
+  margin: 268px 0 215px;
+}
+
+.recips__iframe {
+  width: 480px;
+  height: 273px;
+  border: none;
+}
+
+.video-caption {
+  margin: 24px 0 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 500;
+}
+
+.span__space {
+  margin-left: 268px;
+}
+
+.span__space_right {
+  margin-left: 205px;
 }
