--- a/pages/index.css
+++ b/pages/index.css
@@ -115,7 +115,7 @@
   margin: 32px 0 0;
 }
 
-.recips {
+.recipes {
   background-color: #0a2750;
   background-image: url(../images/background_recipes.svg);
   background-position: center;
@@ -124,7 +124,7 @@
   position: relative;
 }
 
-.recips__title {
+.recipes__title {
   max-width: 580px;
   margin: 0;
   position: absolute;
@@ -135,7 +135,7 @@
   font-weight: 500;
 }
 
-.recips__subtitle {
+.recipes__subtitle {
   max-width: 438px;
   margin: 0;
   position: absolute;
@@ -145,7 +145,7 @@
   line-height: 30px;
 }
 
-.recips__videos {
+.recipes__videos {
   display: flex;
   justify-content: center;
   gap: 40px;
@@ -155,7 +155,7 @@
   margin: 268px 0 215px;
 }
 
-.recips__iframe {
+.recipes__iframe {
   width: 480px;
   height: 273px;
   border: none;
