--- a/pages/index.css
+++ b/pages/index.css
@@ -193,14 +193,14 @@
   line-height: 52px;
 }
 
-.form__fieldset {
+.reservation__container {
   border: none;
   max-width: 385px;
   margin: auto;
   padding-bottom: 120px;
 }
 
-.form__label {
+.reservation__label {
   display: block;
   font-weight: 500;
   font-size: 16px;
@@ -208,7 +208,7 @@
   margin-bottom: 8px;
 }
 
-.form__input {
+.reservation__item {
   color: #838383;
   background-color: #ffffff;
   display: block;
@@ -224,11 +224,11 @@
   padding: 15px 20px;
 }
 
-.form__input_el_update {
+.reservation__item_el_update {
   color: black;
 }
 
-.form__button {
+.reservation__button {
   background-color: #2f80ed;
   color: white;
   display: block;
@@ -241,23 +241,23 @@
   border: none;
 }
 
-.form__button:focus {
+.reservation__button:focus {
   opacity: 0.7;
 }
 
-.form__label_direction_right {
+.reservation__label_direction_right {
   display: flex;
   justify-content: center;
 }
 
-.form__checkbox {
+.reservation__checkbox {
   width: 20px;
   height: 20px;
   margin-right: 12px;
   border-radius: 2px;
 }
 
-.form__label-text {
+.reservation__label-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
