--- a/pages/index.css
+++ b/pages/index.css
@@ -1,270 +1,11 @@
-.page {
-  max-width: 1600px;
-  min-width: 1100px;
-  margin: auto;
-  font-family: "Inter", Arial, sans-serif, "Noto Serif", serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  height: 100vh;
-  max-height: 800px;
-  min-height: 720px;
-  color: #000000;
-  background-color: #ffffff;
-  background-image: url("../images/background_header.svg");
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__logo {
-  position: relative;
-  margin-top: 30px;
-  left: 30px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  list-style: none;
-  display: flex;
-  position: relative;
-  margin: 30px 80px 0 0;
-  gap: 20px;
-  padding: 0;
-}
-
-.nav__links:hover {
-  color: #2f80ed;
-}
-
-.nav_link {
-  text-decoration: none;
-  position: relative;
-  font-weight: 500;
-  color: black;
-}
-
-.header__title {
-  max-width: 729px;
-  margin: 183px 0 28px 80px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  max-width: 683px;
-  margin-left: 80px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  width: 1300px;
-  margin: auto 80px 40px 80px;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.span-paragraph {
-  display: block;
-}
-
-.header__paragraph-right {
-  margin: 32px 0 0;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-position: center;
-  background-size: cover;
-  color: white;
-  position: relative;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin: 0;
-  position: absolute;
-  top: 100px;
-  left: 80px;
-  font-size: 44px;
-  line-height: 52px;
-  font-weight: 500;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin: 0;
-  position: absolute;
-  top: 168px;
-  left: 80px;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-}
-
-.video-item {
-  margin: 268px 0 215px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: none;
-}
-
-.video-caption {
-  margin: 24px 0 0;
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 500;
-}
-
-.span-space {
-  margin-left: 230px;
-}
-
-.span-space-right {
-  margin-left: 150px;
-}
-
-.reservation {
-  color: #000000;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-position: center;
-  background-size: cover;
-}
-
-.reservation__title {
-  text-align: center;
-  margin: 0;
-  padding: 100px 0 80px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form {
-  margin: auto;
-}
-
-.form__elements {
-  max-width: 385px;
-  padding-bottom: 120px;
-}
-
-.reservation__container {
-  border: none;
-}
-
-.reservation__label {
-  display: block;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin-bottom: 8px;
-}
-
-.reservation__item {
-  color: #838383;
-  background-color: #ffffff;
-  display: block;
-  width: 100%;
-  height: 60px;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  border-color: #838383;
-  border-radius: 4px;
-  margin-bottom: 32px;
-  box-sizing: border-box;
-  padding: 15px 20px;
-}
-
-.reservation__item_el_update {
-  color: black;
-}
-
-.reservation__button {
-  background-color: #2f80ed;
-  color: white;
-  display: block;
-  font-size: 16px;
-  line-height: 20px;
-  width: 100%;
-  height: 60px;
-  margin-bottom: 32px;
-  border-radius: 4px;
-  border: none;
-}
-
-.reservation__button:focus {
-  opacity: 0.7;
-}
-
-.reservation__label_direction_right {
-  display: flex;
-  justify-content: center;
-}
-
-.reservation__checkbox {
-  width: 20px;
-  height: 20px;
-  margin-right: 12px;
-  border-radius: 2px;
-}
-
-.reservation__label-text {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/about.css);
+@import url(../blocks/card.css);
+@import url(../blocks/footer.css);
+@import url(../blocks/form.css);
+@import url(../blocks/header.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
