Solving BEM problems

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -20,7 +20,7 @@
   letter-spacing: -1px;
 }
 
-.span-accent {
+.header__span-accent {
   display: block;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
@@ -62,7 +62,7 @@
   margin: 0;
 }
 
-.span-paragraph {
+.header__span-paragraph {
   display: block;
 }
 
