--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -24,3 +24,11 @@
   font-size: 20px;
   line-height: 30px;
 }
+
+.menu__cards {
+  padding: 100px 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 100px;
+}
